@@ -1,12 +1,12 @@
-/*
-* patternlab-node - v0.14.0 - 2015
-*
-* Brian Muenzenmeyer, and the web community.
-* Licensed under the MIT license.
-*
-* Many thanks to Brad Frost and Dave Olsen for inspiration, encouragement, and advice.
-*
-*/
+/* 
+ * patternlab-node - v0.14.0 - 2015 
+ * 
+ * Brian Muenzenmeyer, and the web community.
+ * Licensed under the MIT license. 
+ * 
+ * Many thanks to Brad Frost and Dave Olsen for inspiration, encouragement, and advice. 
+ *
+ */
 
 (function () {
 	"use strict";
