@@ -4,6 +4,7 @@ PL-node-v0.14.0
 - ADD: Support for style modifiers
 - ADD: Support for styleGuideExcludes
 - THX: Thanks to @bramsmulders for the styleGuideExcludes pull request and @illepic for the original headsup
+- FIX: Fix an issue where listitem blocks would only render if the pattern containing the block had a partial within it
 
 PL-node-v0.13.1
 - FIX: Allow verbose partials for list items
